# myfloradna-portfolio

./: .gitignore  README.md  SPEC.md  pyproject.toml
.claude/: settings.local.json
data/processed/: labels.parquet
models/: experiment_log.jsonl  yield_xgb.json
scripts/: plot_batch.py
src/myflora/features/: __init__.py  cli.py  config.py  engineer.py  io.py
src/myflora/generator/: __init__.py  batches.py  cli.py  config.py  faults.py  ou_process.py  simulate.py
src/myflora/model/: __init__.py  cli.py  config.py  labels.py  split.py  tracking.py  train.py
src/myflora/validation/: __init__.py  plausibility.py  reproducibility.py
tests/features/: test_engineer.py  test_feature_table.py  test_io.py
tests/generator/: test_batches.py  test_faults.py  test_ou_process.py  test_simulate.py
tests/model/: test_end_to_end.py  test_labels.py  test_split.py  test_tracking.py  test_train.py
tests/validation/: test_plausibility.py  test_reproducibility.py
