[project]
name = "myflora"
version = "0.1.0"
description = "Synthetic cultivation data generation and crop yield prediction pipeline"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "xgboost>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
myflora-generate = "myflora.generator.cli:main"
myflora-features = "myflora.features.cli:main"
myflora-train = "myflora.model.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
